--- a/index.html
+++ b/index.html
@@ -38,103 +38,299 @@
 			<img src="src/images/Userpic.png">
 		</div>
 	</header>
-	<section class="videoplayer">
-		<div class="videoplayer__main videoplayer-main">
-			<div class="videoplayer-main__image videoplayer-img">
-				<img class="videoplayer-img_item" src="src/images/player.png">
+	<section class="main">
+		<div class="sidebar">
+			<div class="sidebar__categories categories">
+				<div class="categories__item categories-item categories-item_active">
+					<img class="categories-item__image" src="src/images/home.png">
+					<p class="categories-item__text">Home</p>
+				</div>
+				<div class="categories__item categories-item">
+					<img class="categories-item__image" src="src/images/trending.png">
+					<p class="categories-item__text">Trending</p>
+				</div>
+				<div class="categories__item categories-item categories-item_spaced">
+					<img class="categories-item__image" src="src/images/subscriptions.png">
+					<p class="categories-item__text">Subscriptions</p>
+				</div>				
+				<div class="categories__item categories-item">
+					<img class="categories-item__image" src="src/images/library.png">
+					<p class="categories-item__text">Library</p>
+				</div>
+				<div class="categories__item categories-item">
+					<img class="categories-item__image" src="src/images/history.png">
+					<p class="categories-item__text">History</p>
+				</div>
+				<div class="categories__item categories-item">
+					<img class="categories-item__image" src="src/images/watchlater.png">
+					<p class="categories-item__text">Watch later</p>
+				</div>				
+				<div class="categories__item categories-item">
+					<img class="categories-item__image" src="src/images/favourite.png">
+					<p class="categories-item__text">Favourites</p>
+				</div>
+				<div class="categories__item categories-item">
+					<img class="categories-item__image" src="src/images/liked.png">
+					<p class="categories-item__text">Liked videos</p>
+				</div>
+				<div class="categories__item categories-item">
+					<img class="categories-item__image" src="src/images/music.png">
+					<p class="categories-item__text">Music</p>
+				</div>
+				<div class="categories__item categories-item">
+					<img class="categories-item__image" src="src/images/games.png">
+					<p class="categories-item__text">Games</p>
+				</div>
+				<div class="categories__item categories-item categories-item_spaced">
+					<img class="categories-item__image" src="src/images/chevron-down.png">
+					<p class="categories-item__text">Show more</p>
+				</div>																		
 			</div>
-			<div class="videoplayer-info">
-				<h1 class="videoplayer-title">Dude You Re Getting A Telescope</h1>
-				<div class="videoplayer-navigation">
-					<span class="videoplayer-navigation__text">123K views</span>
-					<div class="videoplayer-navigation__wrapper">
-						<div class="videoplayer-navigation__buttons videoplayer-buttons">
-							<a class="videoplayer-buttons__item video-button" href="">
-								<img class="video-button__icon" src="src/images/thumb-up.png">
-								<span class="video-button__text">123k</span>
-							</a>
-							<a class="videoplayer-buttons__item video-button" href="">
-								<img class="video-button__icon" src="src/images/thumb-down.png">
-								<span class="video-button__text">435k</span>
-							</a>
-							<a class="videoplayer-buttons__item video-button" href="">
-								<img class="video-button__icon" src="src/images/share.png">
-								<span class="video-button__text">Share</span>
-							</a>												
+			<div class="sidebar__subscriptions subscriptions">
+				<div class="subscriptions__item subscriptions-item">
+					<img class="subscriptions-item__image" src="src/images/small-1.png">
+					<p class="subscriptions-item__text">Gussie Singleton</p>
+				</div>
+				<div class="subscriptions__item subscriptions-item">
+					<img class="subscriptions-item__image" src="src/images/small-2.png">
+					<p class="subscriptions-item__text">Nora Francis</p>
+				</div>
+				<div class="subscriptions__item subscriptions-item">
+					<img class="subscriptions-item__image" src="src/images/small-3.png">
+					<p class="subscriptions-item__text">Belle Briggs</p>
+				</div>
+				<div class="subscriptions__item subscriptions-item">
+					<img class="subscriptions-item__image" src="src/images/small-4.png">
+					<p class="subscriptions-item__text">Eunice Cortez</p>
+				</div>
+				<div class="subscriptions__item subscriptions-item">
+					<img class="subscriptions-item__image" src="src/images/small-5.png">
+					<p class="subscriptions-item__text">Emma Hanson</p>
+				</div>
+				<div class="subscriptions__item subscriptions-item">
+					<img class="subscriptions-item__image" src="src/images/small-6.png">
+					<p class="subscriptions-item__text">Leah Berry</p>
+				</div>																
+			</div>
+			<div class="sidebar__settings sidebar-settings">
+				<img class="sidebar-settings__image" src="src/images/settings.png">
+				<p class="sidebar-settings__text">Settings</p>				
+			</div>
+		</div>
+		<div class="content">
+			<div class="content__header content-header">
+				<div class="content-header__info content-info">
+					<div class="content-info__userpic info-userpic">
+						<img class="info-userpic__image" src="src/images/profile.png">
+					</div>
+					<div class="content-info__description info-description">
+						<h6 class="info-description__title">Dollie Blair</h6>
+					</div>
+				</div>
+				<div class="content-header__subscribe content-subscribe">
+					<img class="content-subscribe__icon" src="src/images/bell.png">
+					<a class="content-subscribe__button">Subscribe 2.3m</a>
+				</div>
+			</div>
+			<div class="content-videos">
+				<h4 class="content-videos__title">Margaret Phelps videos</h4>
+				<div class="content-videos__wrapper">
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-1.png">
+							<span class="videos-image__text">7:36</span>
 						</div>
-						<a class="videoplayer-more" href="">
-							<img src="src/images/more.png">
-						</a>						
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Astronomy Or Astrology</h6>
+							<p class="videos-description__text">240k views 4 months ago Food & Drink</p>
+						</div>
 					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-2.png">
+							<span class="videos-image__text">2:19</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Advertising outdoors</h6>
+							<p class="videos-description__text">13k views 15 days ago Food & Drink</p>
+						</div>
+					</div>				
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-3.png">
+							<span class="videos-image__text">9:05</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Radio Astronomy</h6>
+							<p class="videos-description__text">1k views 11 months ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-4.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">A Good Autoresponder</h6>
+							<p class="videos-description__text">45k views 2 months ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-5.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Baby Monitor Technology</h6>
+							<p class="videos-description__text">86k views 7 days ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-6.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">lorem ipsum</h6>
+							<p class="videos-description__text">aoijgiouahigu</p>
+						</div>
+					</div>
+				</div>																			
+			</div>				
+			<div class="slider-medium">
+				<div class="slider-header">
+					<h4 class="slider-title">Recommended</h4>
+					<div class="slider-navigation">
+						<a class="slider-navigation__item" href=""><img src="src/images/left.png"></a>
+						<a class="slider-navigation__item" href=""><img src="src/images/right.png"></a>
+					</div>
+				</div>
+				<div class="slider-medium__wrapper">
+					<div class="slider-medium__item medium-item">
+						<div class="slider-medium__thumbnail">
+							<img class="slider-medium__image" src="src/images/medium-1.png">
+							<span class="slider-medium__duration">3.40</span>
+						</div>
+						<div class="slider-medium__description">
+							<h6 class="medium-item__title">Dude You Re Getting A Telescope</h6>
+							<div class="medium-item__text">
+								<p class="medium-text__wrapper">
+									<span class="medium-item__views">34K views</span>
+									<span class="medium-item__date">5 months ago</span>									
+								</p>
+								<span class="medium-item__name">Gussie French</span>
+							</div>
+						</div>
+					</div>
+					<div class="slider-medium__item medium-item">
+						<div class="slider-medium__thumbnail">
+							<img class="slider-medium__image" src="src/images/medium-2.png">
+							<span class="slider-medium__duration">2.40</span>
+						</div>
+						<div class="slider-medium__description">
+							<h6 class="medium-item__title">Moon Gazing</h6>
+							<div class="medium-item__text">
+								<p class="medium-text__wrapper">
+									<span class="medium-item__views">54K views</span>
+									<span class="medium-item__date">11 months ago</span>									
+								</p>
+								<span class="medium-item__name">Edward Osbourne</span>
+							</div>
+						</div>
+					</div>
+					<div class="slider-medium__item medium-item">
+						<div class="slider-medium__thumbnail">
+							<img class="slider-medium__image" src="src/images/medium-3.png">
+							<span class="slider-medium__duration">2.12</span>
+						</div>
+						<div class="slider-medium__description">
+							<h6 class="medium-item__title">Moon Gazing</h6>
+							<div class="medium-item__text">
+								<p class="medium-text__wrapper">
+									<span class="medium-item__views">125K views</span>
+									<span class="medium-item__date">4 month ago</span>									
+								</p>
+								<span class="medium-item__name">Dollie </span>
+							</div>
+						</div>
+					</div>										
 				</div>
 			</div>
-			<div class="videoplayer-summary">
-				<div class="videoplayer-description">
-					<div class="videoplayer-description__thumbnail">
-						<img class="videoplayer-description__image" src="src/images/videoplayer-img.png">
-					</div>
-					<div class="videoplayer-description__text">
-						<h5 class="videoplayer-description__category">Food & Drink</h5>
-						<span class="videoplayer-description__date">Published on 14 Jun 2019</span>						
-						<p class="videoplayer-description__summary">A successful marketing plan relies heavily on the pulling-power of advertising copy. Writing result-oriented ad copy is difficult, as it must appeal to, entice, and convince consumers to take action. There is no magic formula to write perfect ad copy; it is based on a number of factors, including ad placement, demographic, even the consumer’s mood when they see your ad.</p>
-						<span class="videoplayer-description__more">Show more</span>
+			<div class="content-videos">
+				<div class="slider-header">
+					<img class="slider-header__image" src="src/images/videoplayer-img.png">
+					<h4 class="slider-header__title">Food and drink</h4>
+					<p class="slider-header__text">Recommended channel for you</p>
+					<div class="slider-navigation">
+						<a class="slider-navigation__item" href=""><img src="src/images/left.png"></a>
+						<a class="slider-navigation__item" href=""><img src="src/images/right.png"></a>
 					</div>
 				</div>
-				<a class="videoplayer-button" href="">Subscribe 2.3m</a>				
+				<div class="content-videos__wrapper">
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-12.png">
+							<span class="videos-image__text">7:36</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Astronomy Or Astrology</h6>
+							<p class="videos-description__text">240k views 4 months ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-11.png">
+							<span class="videos-image__text">2:19</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Advertising outdoors</h6>
+							<p class="videos-description__text">13k views 15 days ago Food & Drink</p>
+						</div>
+					</div>				
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-10.png">
+							<span class="videos-image__text">9:05</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Radio Astronomy</h6>
+							<p class="videos-description__text">1k views 11 months ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-9.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">A Good Autoresponder</h6>
+							<p class="videos-description__text">45k views 2 months ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-8.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Baby Monitor Technology</h6>
+							<p class="videos-description__text">86k views 7 days ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/slider/slider-7.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">lorem ipsum</h6>
+							<p class="videos-description__text">aoijgiouahigu</p>
+						</div>
+					</div>
+				</div>																			
 			</div>
 		</div>
-		<div class="videoplayer__playlist videoplayer-playlist">
-			<div class="videoplayer-playlist__header playlist-header">
-				<h3 class="playlist-header__title">Next</h3>
-				<div class="toggle">
-					<span class="switch-text">Autoplay</span>
-					<label class="switch">
-					  <input type="checkbox">
-					  <span class="slider round"></span>
-					</label>					
-				</div>
-			</div>
-			<div class="videoplayer-playlist__item playlist-item">
-				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="src/images/video/playlist-1.png">
-					<span class="playlist-item__duration">8.00</span>
-				</div>
-				<div class="playlist-item__description">
-					<h4 class="playlist-item__title">Baby Monitor Technology</h4>
-					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
-				</div>
-			</div>
-			<div class="videoplayer-playlist__item playlist-item">
-				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="src/images/video/playlist-2.png">
-					<span class="playlist-item__duration">8.00</span>
-				</div>
-				<div class="playlist-item__description">
-					<h4 class="playlist-item__title">A Good Autoresponder</h4>
-					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
-				</div>
-			</div>
-			<div class="videoplayer-playlist__item playlist-item">
-				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="src/images/video/playlist-3.png">
-					<span class="playlist-item__duration">8.00</span>
-				</div>
-				<div class="playlist-item__description">
-					<h4 class="playlist-item__title">Selecting The Right Hotel</h4>
-					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
-				</div>
-			</div>
-			<div class="videoplayer-playlist__item playlist-item">
-				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="src/images/video/playlist-4.png">
-					<span class="playlist-item__duration">8.00</span>
-				</div>
-				<div class="playlist-item__description">
-					<h4 class="playlist-item__title">Baby Monitor Technology</h4>
-					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
-				</div>
-			</div>									
-		</div>
+
 	</section>
 	<footer></footer>
 	<script src="build/js/script.js"></script>
